# work_IS_502

./: .project  README.md  Videos.odt  main.cc  persona.h  prueba
Curso/: CMakeLists.txt
Curso/src/: Makefile  a.out  bd.cc  bd.h  curso.h  curso.txt  main.cc  menu.cc  participante.txt  persona.h  text1  text1.cc  text2.cc
code/Curso/: a.out  bd.h  bd.h.gch  curso.cc  curso.h  curso.txt  main  main.cc  menu.cc  participante.txt  persona.h  prueba
eclipse/: .cproject
